# lw-soldering-station

./: README.md  README_CN.md
hardware/: README.md
machine/: README.md  外壳开孔.dxf
soft/: .gitignore  CMakeLists.txt  README.md
soft/Debug/: debug.c  debug.h
soft/Ld/: Link.ld
soft/Startup/: startup_ch32v30x_D8C.S
soft/User/: FreeRTOSConfig.h  ch32v30x_it.c  gt911.c  gt911.h  main.c  rtc.c  rtc.h  solder.c  solder.h  system.c  system.h  system_ch32v30x.c  tools.c  tools.h
soft/lvgl-port/: README.md  lv_conf.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c
soft/lvglapp/: lvglapp.guiguider
soft/lvglapp/lvgl/: lvgl.mk
soft/lvglapp/lvgl-simulator/: Makefile  decoder.h  main.c
soft/lvglapp/lvgl-simulator/SDL2/x86_64-w64-mingw32/lib/cmake/SDL2/: sdl2-config.cmake
soft/lvglapp/lvgl-simulator/SDL2/x86_64-w64-mingw32/lib/pkgconfig/: sdl2.pc
soft/lvglapp/lvgl-simulator/lv_drivers/display/: pro_name.h
soft/lvglapp/lvgl/src/: lv_conf_internal.h
soft/lvglapp/lvgl/src/core/: lv_obj.c
soft/lvglapp/lvgl/src/draw/: lv_draw.mk
soft/lvglapp/lvgl/src/draw/nxp/: lv_gpu_nxp.c
soft/lvglapp/lvgl/src/draw/nxp/vglite/: lv_draw_vglite_rect.c
soft/lvglapp/lvgl/src/extra/: README.md  extra.mk
soft/lvglapp/lvgl/src/extra/themes/default/: lv_theme_default.c
soft/lvglapp/lvgl/src/extra/widgets/: lv_widgets.h
soft/lvglapp/lvgl/src/extra/widgets/analogclock/: lv_analogclock.c  lv_analogclock.h
soft/lvglapp/lvgl/src/extra/widgets/keyboard/: lv_zh_keyboard.c
soft/lvglapp/lvgl/src/extra/widgets/menu/: lv_menu.c
soft/lvglapp/lvgl/src/extra/widgets/radiobtn/: lv_radiobtn.c  lv_radiobtn.h
soft/lvglapp/lvgl/src/extra/widgets/spinbox/: lv_spinbox.c
soft/lvglapp/lvgl/src/hal/: lv_hal_disp.c
soft/lvglapp/lvgl/src/widgets/: lv_label.c
soft/lvglapp/temp/: board.h  conf.json  simulator.h
soft/my-peripheral/: spi_flash.c  spi_flash.h  spi_flash_test.c  spi_flash_test.h  tftlcd.c  tftlcd.h
资料/屏幕/: 3.97TP.rar
